objects/SuperGroupRelatedListIds__c.object
<CustomObject>
    <fields>
        <fullName>SuperGroupDirectAccountRelatedListId__c</fullName>
        <description>This field stores the id of Account Related List on Direct SuperGroup</description>
        <label>SuperGroupDirectAccountRelatedListId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperGroupDirectOpptyRelatedListId__c</fullName>
        <description>This field stores the id of Opportunity Related List on Direct SuperGroup</description>
        <label>SuperGroupDirectOpptyRelatedListId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperGroupDirectSAVRelatedListId__c</fullName>
        <description>This field stores the id of SAV Related List on Direct SuperGroup</description>
        <label>SuperGroupDirectSAVRelatedListId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperGroupOverlayAccountRelatedListId__c</fullName>
        <description>This field stores the id of Account Related List on Overlay SuperGroup</description>
        <label>SuperGroupOverlayAccountRelatedListId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperGroupOverlayOpptyRelatedListId__c</fullName>
        <description>This field stores the id of Opportunity Related List on Overlay SuperGroup</description>
        <label>SuperGroupOverlayOpptyRelatedListId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is used to store the related list ids Super Group object</description>
    <label>Super Group Related List Ids</label>
</CustomObject>